--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 **/*.json
 test.py
 test2.py
+*.pkl
+*.png
+*.h5
+*.tflite
 
 # Ignore Python bytecode cache and compiled files
 __pycache__/
@@ -26,7 +30,9 @@ __pycache__/
 
 # Allow .gitignore itself
 !.gitignore
+/WindowsPowershell/
 
 # Ignore system files
 .DS_Store
 Thumbs.db
+
